Frame use record, use lambda replace CleanupAction